completed JS code to solve navegability on mobile screens through required pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,7 +62,7 @@
 #main-header,
 #main-user-page,
 #main-menu-bar,
-/* #main-message-page, */
+#main-message-page,
 #main-chat-page {
   display: none;
 }
@@ -696,6 +696,10 @@ footer .chat svg {
   width: 100%;
   height: 100%;
   fill: var(--lightTextGray);
+}
+
+footer .chat svg:hover {
+  fill: var(--orange);
 }
 
 footer .profile a {
@@ -1343,6 +1347,26 @@ footer .profile svg {
 ===================================================
 */
 
+
+/* On standard mobile view, we turn off big screen's nav and footer */
+.nav-bar .nav-wrap-big-view {
+  display: none;
+}
+
+#main-message-page .f-wrap-big-screen {
+  display: none;
+}
+
+#main-message-page .page-header {
+  padding: 0;
+}
+
+#main-message-page .the-footer {
+  padding: 0px 20px 30px 20px;
+}
+
+
+
 .modal-msg {
   display: flex;
   flex-direction: column;
@@ -1433,15 +1457,6 @@ footer .profile a {
   width: 25px;
 }
 
-footer .layers a {
-margin-right: 40px;
-}
-
-footer .chat a {
-  margin-left: 40px;
-  }
-
-
 /* Fixing position for navbar, footer and message frame */
 
 
@@ -1476,7 +1491,7 @@ footer .chat a {
 }
 
 .msg-frame {
-  margin-top: 18%;
+  margin-top: 21%;
   margin-bottom: 100px;
 }
 
@@ -1605,8 +1620,6 @@ footer .f-wrap-big-screen  div:hover {
 }
 
 
-
-
 /* ========================== */
 
 /*
@@ -1615,6 +1628,11 @@ footer .f-wrap-big-screen  div:hover {
 ===================================================
 */
 
+
+#main-chat-page .page-header {
+  padding: 0;
+  width: 0%;
+}
 
 .chat-page .chat-frame {
   padding-top: 0px;
@@ -1788,6 +1806,15 @@ footer .f-wrap-big-screen  div:hover {
 .chat-message form input.input-frame {
   width: 80%;
   height: 33px;
+}
+
+.chat-message form input.input-frame:focus {
+  outline: none;
+}
+
+.chat-message form input.input-frame::placeholder {
+  font-size: 16px;
+  font-weight: 200;
 }
 
 .chat-message .smily {
@@ -2091,7 +2118,14 @@ footer .f-wrap-big-screen  div:hover {
   .item3 {grid-area: col3;}
 
 
-  
+  #main-message-page {
+    display: none;
+  }
+
+  #main-chat-page {
+    display: none;
+  }
+
   .menu-bar {
     display: none;
   }
